src/objects/Airline_Account__e.object
<CustomObject>
    <description>Event used to communicate to other systems to push Airline Master Data to PASS</description>
    <fields>
        <fullName>EventType__c</fullName>
        <description>The type of event which generated the event. It may be: Insert, Update, Delete, Undelete</description>
        <label>EventType</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>The Id of the record published</description>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>The name of the record-type of the record published</description>
        <label>RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Airline Account PE</label>
    <pluralLabel>Airline Accounts PE</pluralLabel>
</CustomObject>